RESOLVED FIXED72334
WebProcess crashes when trying to display your "uploaded videos" page on Facebook
https://bugs.webkit.org/show_bug.cgi?id=72334
Summary WebProcess crashes when trying to display your "uploaded videos" page on Face...
chris fleizach
Reported 2011-11-14 17:07:40 PST
1. Log into Facebook in Safari, and open your uploaded videos web page there. 2. Minimize that window, and don't quit Safari. 3. Create a short recording in QTPX and upload it to your Facebook account using QTPX's "Share" feature. 4. Click on the link in QTPX's "Export Progress" window to open a new copy of your Facebook video uploads page. 5. The new copy of your Facebook upload page will open in Safari. You won't need to log in, as you did already above. 6. When the page first opens, it will display, "This video is still encoding." 7. Wait a bit (the web page auto-refreshes every few seconds) until the encoding completes and your newly uploaded movie appears.
Attachments
patch (1.37 KB, patch)
2011-11-14 17:08 PST, chris fleizach
no flags
chris fleizach
Comment 1 2011-11-14 17:08:51 PST
chris fleizach
Comment 2 2011-11-14 17:09:39 PST
Couldn't figure out how to make this happen on a layout test.
chris fleizach
Comment 3 2011-11-14 17:10:14 PST
WebKit Review Bot
Comment 4 2011-11-14 18:46:52 PST
Comment on attachment 115065 [details] patch Clearing flags on attachment: 115065 Committed r100232: <http://trac.webkit.org/changeset/100232>
WebKit Review Bot
Comment 5 2011-11-14 18:46:57 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.