WebProcess crashes when trying to display your "uploaded videos" page on Facebook https://bugs.webkit.org/show_bug.cgi?id=72334

Reviewed by Beth Dakin.

Protect against documents without frames.

* accessibility/mac/WebAccessibilityObjectWrapper.mm:
(-[WebAccessibilityObjectWrapper remoteAccessibilityParentObject]):


git-svn-id: svn://svn.chromium.org/blink/trunk@100232 bbb929c8-8fbe-4397-9dbb-9b2b20218538